--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="pass" class="form-label">Password</label>
-                    <input type="text" class="form-control" name="pass" id="pass" aria-describedby="helpId"
+                    <input type="password" class="form-control" name="pass" id="pass" aria-describedby="helpId"
                         placeholder="Your password">
                     <small id="helpId" class="form-text text-muted">enter your password</small>
                 </div>
