--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,18 +1,17 @@
 <header class="p-3 text-bg-dark">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
+            <a href="{% url 'home' %}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                DP BLOG
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                <li>
+                    <a href="{% url 'home' %}" class="nav-link px-2 text-light">
+                        <i class="bi bi-house"></i>
+                    </a>
+                </li>
+
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -20,10 +19,19 @@
                     aria-label="Search">
             </form>
 
+
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+                {% if user.is_authenticated %}
+                {% if user.is_superuser %}
+                <a href="{% url 'admin:index' %}" class="btn btn-outline-light me-2">Dashboard</a>
+                {% endif %}
+                <a href="{% url 'logout' %}" class="btn btn-outline-danger me-2">Logout</a>
+                {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Login</a>
+                <a href="{% url 'register' %}" class="btn btn-warning">Sign-up</a>
+                {% endif %}
             </div>
+
         </div>
     </div>
 </header>
