--- a/templates/components/article_card.html
+++ b/templates/components/article_card.html
@@ -4,7 +4,7 @@
         object-fit: cover;
     }
 </style>
-<div class="col-lg-3 col-md-6">
+<div class="col-lg-3 col-md-6 mb-3">
     <div class="card shadow-sm">
         <img src="{{item.image.url}}" alt="{{item.title}}" class="card-img-top" height="300">
         <div class="card-body">
@@ -12,7 +12,7 @@
                 {{item.title}}
             </a>
             <p class="card-text">
-                {{item.content}}
+                {{item.content|truncatewords:10}}
             </p>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
