--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -33,7 +33,25 @@
             </p>
         </div>
         {% endfor %}
-        <!-- pagination -->
+        <nav aria-label="article navigation">
+            <ul class="pagination justify-content-center">
+                {% if articles.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?p={{ articles.previous_page_number }}">previous</a>
+                </li>
+                {% endif %}
+                <li class="page-item">
+                    <a class="page-link active">
+                        {{ articles.number }} of {{ articles.paginator.num_pages }}
+                    </a>
+                </li>
+                {% if articles.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?p={{ articles.next_page_number }}">next</a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
 </div>
 {% endblock %}
