--- a/templates/blog/my_articles.html
+++ b/templates/blog/my_articles.html
@@ -1,6 +1,7 @@
 {% extends 'layout/base.html' %}
 {% load static %}
 {% block content %}
+{% include 'components/message.html' %}
 <div class="container my-3">
     <div class="row">
 
